--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ padding: 40px;
 
 .flex-container{
     display: flex;
-    background-color: #006a6a;
+
     justify-content: space-around;
-    padding: 20px;
+    
 }
 
 .header-title{
@@ -44,8 +44,47 @@ font-size: 20px;
 font-weight: 500;
 margin-bottom: 15px;
 }
+.col-1{
+background-color: #006a6a;
+width: 50%;
+padding: 20px;
+color: #fff;
+}
+.col-2{
+background-color: #009e9e;
+width: 50%;
+padding: 20px;
+color: #fff;
+}
 
+.subscription-title{
+font-size: 20px;
+text-align: center;
+margin-bottom: 20px;
+}
+.price{
+    font-size: 26px;
+    font-weight: 700;
+}
+.month{
+font-size: 15px;
+font-style: italic;
 
+}
+.button{
+margin-top: 20px;
+width: 100%;
+padding: 15px 32px;
+color: #006a6a;
+background-color: #ccc;
+font-size: 16px;
+border-radius: 4px;
+border: none;
+cursor: pointer;
+}
+.button:hover{
+    background-color: #e9e9e9;
+}
 </style>
 
 
@@ -68,10 +107,20 @@ margin-bottom: 15px;
         
 
          <div class="flex-container">
-                    <div>
-                        coluna 1
+                <div class="col-1">
+                    <div class="subscription-title">
+                        Assinatura mensal
                     </div>
-                  <div>
+                    <div>
+                         <span class="price">R$ 99,99</span> 
+                         <span class="month">por mes</span>
+                    </div>
+                    <div>
+                        cancele a qualquer momento
+                    </div>
+                    <button class="button">Assine agora</button>
+                </div>
+                  <div class="col-2">
                    coluna 2
                    </div>
         </div>              
